--- a/3_forms/smartcookielearner/smartcookie/templates/base.html
+++ b/3_forms/smartcookielearner/smartcookie/templates/base.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <h1>Welcome to Smart Cookie Learner</h1>
+        <div>
+          Smart cookie learner:
+          <a href="/index">Home</a>
+          <a href="/login">Login</a>
+        </div>
         {% block content %}
        
         {% endblock content %}
