--- a/3_forms/smartcookielearner/smartcookie/templates/base.html
+++ b/3_forms/smartcookielearner/smartcookie/templates/base.html
@@ -14,8 +14,17 @@
           <a href="/index">Home</a>
           <a href="/login">Login</a>
         </div>
+        <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}
-       
         {% endblock content %}
     </body>
 </head>
